# Tetronix-Backend

./: Cargo.toml  Dockerfile  README.md  Schema.sql  docker-compose.yml  start_test_db.sh
.cargo/: audit.toml
.github/workflows/: dev.yml  prod.yml  security.yml
src/: config.rs  extractors.rs  main.rs  models.rs  old.rs
src/auth/: auth.rs  mod.rs
src/builder/: game_builder.rs  mod.rs  user_builder.rs
src/data_base/: Schema.sql  data_base.rs  mod.rs
src/errors/: app_error.rs  mod.rs  repository_error.rs  services_error.rs
src/game_logic/: game_engine.rs  impls.rs  mod.rs  models.rs  piece_rng.rs  state.rs
src/handlers/: auth_handler.rs  game_handler.rs  game_websocket_handler.rs  mod.rs  user_handler.rs
src/middleware/: auth_middleware.rs  authenticated_user_extractor.rs  mod.rs  rate_limiter.rs  session_extractors.rs
src/models/: auth.rs  config.rs  game.rs  mod.rs  rate_limiter.rs  state.rs  user.rs
src/models/game/: client.rs  mod.rs  server.rs
src/repository/: game_repository.rs  mod.rs  session_repository.rs  traits.rs  user_repository.rs
src/services/: auth_service.rs  game_service.rs  mod.rs  services.rs  session_service.rs  traits.rs  user_service.rs
src/tests/integration/: helper.rs  mod.rs
src/tests/integration/handlers/: auth_handlers.rs  game_handler.rs  mod.rs  user_handler.rs
src/tests/unit/: mod.rs
src/tests/unit/helpers/: common_helpers.rs  mod.rs  repository_helpers.rs  service_helpers.rs
src/tests/unit/repository/: game_repository.rs  mod.rs  session_repository.rs  user_repository.rs
src/tests/unit/services/: auth_service.rs  game_service.rs  mod.rs  session_service.rs  user_service.rs
