[package]
name = "tetronix_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.5", features = ["runtime-async-std-native-tls", "postgres"] }
actix-cors = "0.7.0"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.140"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
tokio = { version = "1.39.0", features = ["full"] }

