[package]
name = "tetronix_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "tls-rustls-aws-lc-rs", "postgres"] }
actix-cors = "0.7.0"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.140"
thiserror = "1.0"
anyhow = "1.0"
actix-ws = "0.3.0"
tokio = { version = "1.39.0", features = ["full"] }
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
systemstat = "0.2.5"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
jsonwebtoken = {version="10.3.0", features = ["aws_lc_rs"]}
chrono = "0.4.44"
bytes = "1.11.1"
rustls-webpki = { version = "0.103.10"}

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
mockito = "1.7.0"

#ignore this comment